# ChangeLog for media-video/minitube
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/minitube/ChangeLog,v 1.61 2011/11/02 14:45:46 phajdan.jr Exp $

  02 Nov 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> minitube-1.6.ebuild:
  x86 stable wrt bug #388867

  01 Nov 2011; Tony Vroon <chainsaw@gentoo.org> minitube-1.6.ebuild:
  Marked stable on AMD64 based on arch testing by Agostino "ago" Sarubbo,
  Elijah "Armageddon" El Lazkani & Tomáš "Mepho" Pružina in security bug
  #388867.

  30 Oct 2011; Markos Chandras <hwoarang@gentoo.org> minitube-1.6.ebuild:
  more lingua fixes

  29 Oct 2011; Markos Chandras <hwoarang@gentoo.org> minitube-1.6.ebuild:
  fix linguas per bug #388871

*minitube-1.6 (29 Oct 2011)

  29 Oct 2011; Markos Chandras <hwoarang@gentoo.org> +minitube-1.6.ebuild:
  version bump

*minitube-1.5-r1 (07 Aug 2011)

  07 Aug 2011; Markos Chandras <hwoarang@gentoo.org> -minitube-1.5.ebuild,
  +minitube-1.5-r1.ebuild, -files/minitube-1.5-non-static-filename.patch,
  +files/minitube-1.5-use-correct-env-variable.patch:
  Remove security fix due to regressions. Use temporary patch to override the
  wrong environmental variable. Force revbump to stable

  07 Aug 2011; Markos Chandras <hwoarang@gentoo.org> -minitube-1.4.ebuild,
  minitube-1.5.ebuild, +files/minitube-1.5-non-static-filename.patch:
  Add security fix and mark stable for amd64. Bug #377929

  07 Aug 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> minitube-1.5.ebuild:
  x86 stable wrt bug #377929

*minitube-1.5 (05 Aug 2011)

  05 Aug 2011; Markos Chandras <hwoarang@gentoo.org> -minitube-1.4.3.ebuild,
  +minitube-1.5.ebuild:
  Version bump

  17 May 2011; Markos Chandras <hwoarang@gentoo.org> -minitube-1.4.2.ebuild:
  remove old

*minitube-1.4.3 (16 May 2011)

  16 May 2011; Markos Chandras <hwoarang@gentoo.org> +minitube-1.4.3.ebuild:
  Version bump

*minitube-1.4.2 (16 Apr 2011)
